src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>APPLE_Top_10_Free_App_Rank__c</fullName>
        <label>APPLE Top 10 Free App Rank</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APPLE_Top_10_Free_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLE Top 10 Free App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPLE_Top_10_Paid_App_Rank__c</fullName>
        <label>APPLE Top 10 Paid App Rank</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APPLE_Top_10_Paid_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLE Top 10 Paid App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of this applications account.</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctOwnerAppID__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AcctOwnerAppID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctOwnerApp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_App_concatenate__c</fullName>
        <formula>Account__r.Name + &quot; : &quot; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct_App_concatenate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Alpha__c</fullName>
        <label>Actual Alpha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Beta__c</fullName>
        <label>Actual Beta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_GM_Release_Candidate__c</fullName>
        <formula>Actual_GM__c -14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual GM minus two weeks</inlineHelpText>
        <label>Actual GM Release Candidate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_GM__c</fullName>
        <label>Actual GM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Added_to_Solutions_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this application in the Solutions Catalog? Check this box it is has been added.</description>
        <label>Added to Solutions Catalog?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Android_3_0_related_app__c</fullName>
        <inlineHelpText>Checks if Android 3.0 is listed as a related platform;
Field visible to ADMINS only  (for reporting purposes)</inlineHelpText>
        <label>Android 3.0 related app?</label>
        <summaryFilterItems>
            <field>PlatformApp__c.Platform__c</field>
            <operation>equals</operation>
            <value>a2A4000000000qgEAA</value>
        </summaryFilterItems>
        <summaryForeignKey>PlatformApp__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Android_Availability_Date__c</fullName>
        <label>Android Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Android_Status__c</fullName>
        <label>Android Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Committed / Started</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered / Shipped</fullName>
                <color>#33CC00</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Android_Top_100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Android Top 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Android_Top_10_FREE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Android Top 10 FREE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Android_Top_10_PAID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Android Top 10 PAID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Android_Top_Showcase_Apps_on_Marketplace__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Top Android App on Marketplace</description>
        <label>Android Top Showcase Apps on Marketplace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Android__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this application build on Android</inlineHelpText>
        <label>Android</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SFDC Power of One formula . When creating reports, please use this to sum up the total # of Applications</inlineHelpText>
        <label>App Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Risk_Flag_Condition__c</fullName>
        <formula>IF(text(App_Risk_Flag__c ) = &quot;Red&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlHw&quot;, &quot;Red&quot;),
IF(text(App_Risk_Flag__c ) = &quot;Yellow&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI1&quot;, &quot;Yellow&quot;),
IF(text(App_Risk_Flag__c ) = &quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000VlI6&quot;, &quot;Green&quot;),
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Risk Flag Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Risk_Flag__c</fullName>
        <label>App Risk Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Category__c</fullName>
        <label>Application Category</label>
        <picklist>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core SW: Device Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core SW: Drivers &amp; Stacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core SW: Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core SW: Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifestyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media SW: Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media SW: Codecs &amp; DRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media SW: Image &amp; Camera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media SW: Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media SW: Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface: Fonts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface: GUI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface: Input Systems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Decision__c</fullName>
        <label>Contract_Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Governing_End_Date__c</fullName>
        <description>From related Contract record</description>
        <inlineHelpText>This comes from the related contract record, and is READ-ONLY;  to relate a contract, please go to the Related Lists section</inlineHelpText>
        <label>Contract Governing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Contract_LRB_Approved_Device__c</fullName>
        <label>Contract_LRB_Approved_Device</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Contract_LRB_Approved_Region__c</fullName>
        <label>Contract_LRB_Approved_Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Contract_LRB_Pipeline_ID__c</fullName>
        <label>Contract_LRB_Pipeline_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Let_Expire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Let Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Name__c</fullName>
        <description>From related Contract record</description>
        <inlineHelpText>This comes from the related contract record, and is READ-ONLY;  to relate a contract, please go to the Related Lists section</inlineHelpText>
        <label>Contract Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Number__c</fullName>
        <description>From related Contract record</description>
        <inlineHelpText>This comes from the related contract record, and is READ-ONLY;  to relate a contract, please go to the Related Lists section</inlineHelpText>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From related Contract record</description>
        <inlineHelpText>This comes from the related contract record, and is READ-ONLY;  to relate a contract, please go to the Related Lists section</inlineHelpText>
        <label>Contract Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Phase__c</fullName>
        <description>From related Contract record</description>
        <inlineHelpText>This comes from the related contract record, and is READ-ONLY;  to relate a contract, please go to the Related Lists section</inlineHelpText>
        <label>Contract Phase</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Status__c</fullName>
        <description>From related Contract record</description>
        <inlineHelpText>This comes from the related contract record, and is READ-ONLY;  to relate a contract, please go to the Related Lists section</inlineHelpText>
        <label>Contract Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Application External Unique ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this App belongs to an overall &quot;grouping&quot;, for cumulative royalty calculation purposes</description>
        <inlineHelpText>If this App belongs to an overall &quot;grouping&quot;, for cumulative royalty calculation purposes</inlineHelpText>
        <label>Current Ship Volume</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Application_Group__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <displayFormat>82SF{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Application_Instructions__c</fullName>
        <description>Enter any peculiarities or information specific to this application that you would like the MotoReady PM to be aware of</description>
        <inlineHelpText>Enter any peculiarities or information specific to this application that you would like the MotoReady PM to be aware of</inlineHelpText>
        <label>Application Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Sub_Type__c</fullName>
        <inlineHelpText>Applicable if Type is Preload or Services</inlineHelpText>
        <label>Application Sub Type</label>
        <picklist>
            <controllingField>Application_Type__c</controllingField>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMS - Google Mobile Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSS Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand Alone App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAP Link / Stub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trademark License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW Functional Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMI Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoPlay App</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Embedded</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Preload</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Postload</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>IP Settlement</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier App</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Automate_Partner_Checklist_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to auto-approve DevApps or skip the Partner Manager approval step when an Applications Countries match with the associated Devices Countries.</inlineHelpText>
        <label>Automate Partner Checklist Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automated_from_GPPD__c</fullName>
        <description>Field used to communicate to SW BOM Managers/Owners  that the application is automatically added and deleted from SW BOMs based on data specified by the Product Teams in the GPPD tool.</description>
        <inlineHelpText>Field used to communicate to SW BOM Managers/Owners  that the application is automatically added and deleted from SW BOMs based on data specified by the Product Teams in the GPPD tool.</inlineHelpText>
        <label>Automated into SW BOM from GPPD Specs</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_Commercially__c</fullName>
        <label>Available Commercially?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_For_Use__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Mark this app as available for use on a device or not.</description>
        <inlineHelpText>Can this app be added to devices or copied from one device to another? If the app is already on a device but is no longer available for use it must be manually removed from the device.</inlineHelpText>
        <label>Available For Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Binary_Name__c</fullName>
        <label>Binary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRENT_ROYALTY_TIER__c</fullName>
        <inlineHelpText>This data is fed in from the SSAS Financial system</inlineHelpText>
        <label>CURRENT_ROYALTY_TIER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carrier_Branded__c</fullName>
        <inlineHelpText>Is this a Carrier Branded App?</inlineHelpText>
        <label>Carrier Branded?</label>
        <picklist>
            <controllingField>Application_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_Furnished__c</fullName>
        <description>Is the application carrier furnished or is there a considerable amount of involvement by Motorola?</description>
        <inlineHelpText>Is the application carrier furnished or is there a considerable amount of involvement by Motorola?</inlineHelpText>
        <label>Carrier Furnished?</label>
        <picklist>
            <controllingField>Application_Type__c</controllingField>
            <picklistValues>
                <fullName>Carrier Managed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Managed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_Mandated__c</fullName>
        <description>Is this a Carrier Mandated application?</description>
        <inlineHelpText>Is this a Carrier Mandated application?</inlineHelpText>
        <label>Carrier Mandated?</label>
        <picklist>
            <controllingField>Application_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercial_Review_Status__c</fullName>
        <label>Commercial Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercial_Review_legal_license_indem__c</fullName>
        <inlineHelpText>Commercial Review (legal, license, indemnity, warranty)</inlineHelpText>
        <label>Commercial Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Reviewer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Employee must be Active in the Core Directory</errorMessage>
            <filterItems>
                <field>Motorola_Core_Directory__c.HRStatus__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Applications (Commercial Reviewer)</relationshipLabel>
        <relationshipName>Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial_Risk_Level__c</fullName>
        <label>Commercial Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>C0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connectivity__c</fullName>
        <inlineHelpText>If your application is dependent on a server/network/wireless/SMS connection or any connectivity outside the handset, then select Network Connected.
If the application can run solely on the handset (eg a game), then select Stand-Alone</inlineHelpText>
        <label>Connectivity</label>
        <picklist>
            <picklistValues>
                <fullName>Network Connected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand-Alone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Unit__c</fullName>
        <label>Cost Per Unit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_of_ComptApps__c</fullName>
        <label>Count of ComptApps</label>
        <summaryForeignKey>Competitive_Source_Apps__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Gov__c</fullName>
        <label>Count_of_Gov</label>
        <summaryFilterItems>
            <field>ContApplAssoc__c.Governing_End_Date__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ContApplAssoc__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_SW_Projects__c</fullName>
        <label>Count of SW Projects</label>
        <summaryForeignKey>SW_Project_Application__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Countries_Status__c</fullName>
        <description>Field to track whether IP Settlements have correct countries filled out in preparation for Automation</description>
        <inlineHelpText>Field to track whether IP Settlements have correct countries filled out in preparation for Automation</inlineHelpText>
        <label>Countries Status</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Ship_Volume__c</fullName>
        <inlineHelpText>The Current shipped volume for this Application.This data is fed in from the SSAS Financial system</inlineHelpText>
        <label>Current Ship Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Danger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Danger?</inlineHelpText>
        <label>Danger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defects_Include_on_BOM__c</fullName>
        <description>Dev-App # of Defects with Include on BOM checked</description>
        <inlineHelpText>Dev-App # of Defects with Include on BOM checked</inlineHelpText>
        <label># Defects (Include on BOM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defects_auto_generated__c</fullName>
        <description>Dev-App # of Defects (not included on BOM but unnecessarily created and associated with Device)</description>
        <inlineHelpText>Dev-App # of Defects (not included on BOM but unnecessarily created and associated with Device)</inlineHelpText>
        <label># Defects (auto-generated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Basic description of what the app does on the phone. Is it a game, a photo editor, fonts, etc.? What does the app do?</description>
        <inlineHelpText>Basic description of what the app does on the phone. Is it a game, a photo editor, fonts, etc.? What does the app do?</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_End_Date__c</fullName>
        <description>Sunset field VHD#86773</description>
        <inlineHelpText>The last day the contract would allow us add an app to a new platform design or APC</inlineHelpText>
        <label>Design End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_End_Date__c</fullName>
        <description>Sunset field VHD#86773</description>
        <inlineHelpText>The last day the contract would allow us add and app to a new device within in existing APC</inlineHelpText>
        <label>Device End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclosure_Complete__c</fullName>
        <description>Business disclosure by MDM</description>
        <inlineHelpText>Business disclosure by MDM</inlineHelpText>
        <label>Disclosure Complete</label>
        <type>Date</type>
    </fields>
</CustomObject>